welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: '=>' expected but 'case' found.
    case (tea,candy) if candy>= 2*tea => 2
    ^